--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Dylan Paulus
+email: dylantpaulus@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  All about the guy.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dtpaulus
+github_username:  ganderzz
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: dp
 gems:
   - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
+sass:
+  sass_dir: _sass
+  style: compressed
