--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Dylan Paulus
 email: dylantpaulus@gmail.com
 description: >
-  Programmer
+  Fullstack programmer working on the web
 baseurl: ""
-url: ""
+url: "http://dylanpaulus.com"
 twitter_username: dtpaulus
 github_username:  ganderzz
 
