Fix Twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""
 url: "http://dylanpaulus.com"
 
 author:
-  twitter: "ganderzz"
+  twitter: "DylanPaulus"
   github: "ganderzz"
   linkedin: "dylanpaulus"
   stackoverflow: "7828585/dpaulus"
