--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "version": "1.1.0",
   "author": "ganderzz",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.2",
+    "gatsby-plugin-mdx": "^1.0.57",
     "gatsby-plugin-offline": "^3.0.21",
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sharp": "^2.3.0",
     "gatsby-plugin-typescript": "^2.1.18",
     "gatsby-remark-autolink-headers": "^2.1.18",
+    "gatsby-remark-images": "^3.1.33",
     "gatsby-remark-prismjs": "^3.3.23",
     "gatsby-source-filesystem": "^2.1.37",
-    "gatsby-transformer-remark": "^2.6.35",
+    "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.3.5",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.3"
   },
   "license": "MIT",
   "scripts": {
@@ -37,7 +42,5 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "devDependencies": {
-    "tailwindcss": "^1.1.3"
-  }
+  "devDependencies": {}
 }
