--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-postcss": "^2.1.16",
     "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-typescript": "^2.1.20",
     "gatsby-remark-autolink-headers": "^2.1.19",
-    "gatsby-remark-images": "^3.1.34",
+    "gatsby-remark-copy-linked-files": "^2.1.31",
+    "gatsby-remark-images": "^3.1.35",
     "gatsby-remark-prismjs": "^3.3.25",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.38",
