--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.38",
     "gatsby-transformer-sharp": "^2.3.6",
-    "gitment": "^0.0.3",
+    "gitalk": "^1.6.2",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
