--- a/package.json
+++ b/package.json
@@ -5,32 +5,34 @@
   "version": "1.1.0",
   "author": "ganderzz",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.18",
-    "@mdx-js/react": "^1.6.18",
-    "gatsby": "^2.24.73",
+    "@mdx-js/mdx": "^1.6.19",
+    "@mdx-js/react": "^1.6.19",
+    "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-manifest": "^2.4.34",
-    "gatsby-plugin-mdx": "^1.2.46",
-    "gatsby-plugin-offline": "^3.2.31",
-    "gatsby-plugin-postcss": "^3.0.1",
+    "gatsby-plugin-manifest": "^2.4.37",
+    "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-plugin-netlify-cms": "^4.3.17",
+    "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.40",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-remark-autolink-headers": "^2.3.15",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-typescript": "^2.4.25",
+    "gatsby-remark-autolink-headers": "^2.3.16",
     "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-images": "^3.3.40",
     "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-source-filesystem": "^2.3.34",
-    "gatsby-transformer-remark": "^2.8.38",
-    "gatsby-transformer-sharp": "^2.5.17",
-    "gitalk": "^1.6.2",
-    "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.47",
+    "gatsby-transformer-sharp": "^2.5.20",
+    "gitalk": "^1.7.0",
+    "netlify-cms-app": "^2.13.1",
+    "prismjs": "^1.22.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "remark": "^12.0.1",
-    "strip-markdown": "^3.1.2",
-    "tailwindcss": "^1.8.13"
+    "remark": "^13.0.0",
+    "strip-markdown": "^4.0.0",
+    "tailwindcss": "^1.9.6"
   },
   "license": "MIT",
   "scripts": {
