--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
+    "@svgr/webpack": "^5.4.0",
+    "elasticlunr": "^0.9.5",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.37",
@@ -16,6 +18,7 @@
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.4.25",
     "gatsby-remark-autolink-headers": "^2.3.16",
     "gatsby-remark-copy-linked-files": "^2.3.19",
