--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gatsby-remark-autolink-headers": "^2.3.16",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.3.40",
+    "gatsby-remark-mathjax": "^1.0.0",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-remark": "^2.8.47",
