--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27",
     "remark": "^13.0.0",
     "strip-markdown": "^4.0.0",
     "tailwindcss": "^1.9.6"
