--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "version": "1.1.0",
   "author": "ganderzz",
+  "nodeLinker": "node-modules",
   "dependencies": {
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
     "@svgr/webpack": "^5.4.0",
     "autoprefixer": "^10.0.1",
     "elasticlunr": "^0.9.5",
-    "gatsby": "^2.24.91",
+    "gatsby": "^2.27.2",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.37",
     "gatsby-plugin-mdx": "^1.2.52",
-    "gatsby-plugin-netlify-cms": "^4.3.17",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -24,14 +24,15 @@
     "gatsby-remark-autolink-headers": "^2.3.16",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.3.40",
+    "gatsby-remark-katex": "^3.5.0",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-source-filesystem": "^2.3.37",
-    "gatsby-transformer-remark": "^2.8.47",
+    "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.5.20",
     "gitalk": "^1.7.0",
-    "netlify-cms-app": "^2.13.1",
-    "postcss": "^8.1.4",
+    "katex": "^0.12.0",
+    "postcss": "^8.1.10",
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -39,7 +40,7 @@
     "react-spring": "^8.0.27",
     "remark": "^13.0.0",
     "strip-markdown": "^4.0.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.1"
   },
   "license": "MIT",
   "scripts": {
