--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "ganderzz",
   "nodeLinker": "node-modules",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.19",
-    "@mdx-js/react": "^1.6.19",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.4.0",
     "autoprefixer": "^10.0.1",
     "elasticlunr": "^0.9.5",
     "gatsby": "^2.27.2",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-plugin-mdx": "^1.5.0",
+    "gatsby-plugin-netlify": "^2.6.0",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
