--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
   "author": "ganderzz",
   "nodeLinker": "node-modules",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.21",
-    "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.4.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.0.3",
     "elasticlunr": "^0.9.5",
-    "gatsby": "^2.27.2",
+    "gatsby": "^2.27.4",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-netlify": "^2.6.0",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.4.25",
     "gatsby-remark-autolink-headers": "^2.3.16",
@@ -46,7 +43,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "GATSBY_EXPERIMENT_DEVJS_LAZY=true gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve"
   },
