--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "elasticlunr": "^0.9.5",
     "gatsby": "^2.27.4",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-feed": "^2.8.0",
     "gatsby-plugin-manifest": "^2.4.37",
     "gatsby-plugin-netlify": "^2.6.0",
     "gatsby-plugin-offline": "^3.2.38",
