--- a/package.json
+++ b/package.json
@@ -7,39 +7,39 @@
   "nodeLinker": "node-modules",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
-    "autoprefixer": "^10.0.3",
+    "autoprefixer": "^10.2.5",
     "elasticlunr": "^0.9.5",
-    "gatsby": "^2.27.4",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-feed": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-netlify": "^2.6.0",
-    "gatsby-plugin-offline": "^3.2.38",
-    "gatsby-plugin-postcss": "^3.0.4",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.9.1",
-    "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typescript": "^2.4.25",
-    "gatsby-remark-autolink-headers": "^2.3.16",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.3.40",
-    "gatsby-remark-katex": "^3.5.0",
+    "gatsby": "^3.2.1",
+    "gatsby-image": "^3.2.0",
+    "gatsby-plugin-feed": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-netlify": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-plugin-typescript": "^3.2.0",
+    "gatsby-remark-autolink-headers": "^3.2.0",
+    "gatsby-remark-copy-linked-files": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-katex": "^4.2.0",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
-    "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-transformer-remark": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.5.20",
-    "gitalk": "^1.7.0",
-    "katex": "^0.12.0",
-    "postcss": "^8.1.10",
-    "prismjs": "^1.22.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-remark-prismjs": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "gitalk": "^1.7.2",
+    "katex": "^0.13.2",
+    "postcss": "^8.2.9",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.0.0",
     "remark": "^13.0.0",
     "strip-markdown": "^4.0.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.1.1"
   },
   "license": "MIT",
   "scripts": {
@@ -56,8 +56,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "prettier": "^2.1.2"
+    "cssnano": "^4.1.11",
+    "cssnano-preset-advanced": "^4.0.8",
+    "prettier": "^2.2.1"
   }
 }
