fix: cleanup mobile design

--- a/package.json
+++ b/package.json
@@ -5,48 +5,13 @@
   "version": "1.1.0",
   "author": "ganderzz",
   "nodeLinker": "node-modules",
-  "dependencies": {
-    "@svgr/webpack": "^5.4.0",
-    "autoprefixer": "^10.2.5",
-    "elasticlunr": "^0.9.5",
-    "gatsby": "^3.2.1",
-    "gatsby-image": "^3.2.0",
-    "gatsby-plugin-feed": "^3.2.0",
-    "gatsby-plugin-manifest": "^3.2.0",
-    "gatsby-plugin-netlify": "^3.2.0",
-    "gatsby-plugin-offline": "^4.2.0",
-    "gatsby-plugin-postcss": "^4.2.0",
-    "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.1",
-    "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-typescript": "^3.2.0",
-    "gatsby-remark-autolink-headers": "^3.2.0",
-    "gatsby-remark-copy-linked-files": "^3.2.0",
-    "gatsby-remark-images": "^4.2.0",
-    "gatsby-remark-katex": "^4.2.0",
-    "gatsby-remark-numbered-footnotes": "^1.0.1",
-    "gatsby-remark-prismjs": "^4.2.0",
-    "gatsby-source-filesystem": "^3.2.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.2.0",
-    "gitalk": "^1.7.2",
-    "katex": "^0.13.2",
-    "postcss": "^8.2.9",
-    "prismjs": "^1.23.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-spring": "^9.0.0",
-    "remark": "^13.0.0",
-    "strip-markdown": "^4.0.0",
-    "tailwindcss": "^2.1.1"
-  },
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "GATSBY_EXPERIMENT_DEVJS_LAZY=true gatsby develop",
     "start": "npm run develop",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "lint": "textlint posts/**/*.md"
   },
   "repository": {
     "type": "git",
@@ -55,9 +20,53 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
+  "dependencies": {
+    "@svgr/webpack": "5.5.0",
+    "elasticlunr": "0.9.5",
+    "gatsby": "3.3.0",
+    "gatsby-image": "3.3.0",
+    "gatsby-plugin-feed": "3.3.0",
+    "gatsby-plugin-manifest": "3.3.0",
+    "gatsby-plugin-netlify": "3.3.0",
+    "gatsby-plugin-offline": "4.3.0",
+    "gatsby-plugin-postcss": "4.3.0",
+    "gatsby-plugin-react-helmet": "4.3.0",
+    "gatsby-plugin-sharp": "3.3.0",
+    "gatsby-plugin-svgr": "3.0.0-beta.0",
+    "gatsby-plugin-typescript": "3.3.0",
+    "gatsby-remark-autolink-headers": "4.0.0",
+    "gatsby-remark-copy-linked-files": "4.0.0",
+    "gatsby-remark-images": "5.0.0",
+    "gatsby-remark-katex": "5.0.0",
+    "gatsby-remark-numbered-footnotes": "1.0.1",
+    "gatsby-remark-prismjs": "5.0.0",
+    "gatsby-source-filesystem": "3.3.0",
+    "gatsby-transformer-remark": "4.0.0",
+    "gatsby-transformer-sharp": "3.3.0",
+    "gitalk": "1.7.2",
+    "katex": "0.13.2",
+    "postcss": "8.2.10",
+    "prismjs": "1.23.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "remark": "13.0.0",
+    "strip-markdown": "4.0.0",
+    "tailwindcss": "2.1.1"
+  },
   "devDependencies": {
-    "cssnano": "^4.1.11",
-    "cssnano-preset-advanced": "^4.0.8",
-    "prettier": "^2.2.1"
+    "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.7",
+    "autoprefixer": "10.2.5",
+    "cssnano": "5.0.1",
+    "cssnano-preset-advanced": "5.0.0",
+    "prettier": "2.2.1",
+    "textlint": "11.9.0",
+    "textlint-rule-footnote-order": "1.0.3",
+    "textlint-rule-max-comma": "1.0.4",
+    "textlint-rule-no-start-duplicated-conjunction": "2.0.2",
+    "textlint-rule-no-todo": "2.0.1",
+    "textlint-rule-period-in-list-item": "0.3.2",
+    "textlint-rule-rousseau": "1.4.6",
+    "textlint-rule-stop-words": "2.0.9"
   }
 }
