--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "serve": "gatsby serve",
     "lint": "textlint posts/**/*.md"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
@@ -22,47 +25,51 @@
   },
   "dependencies": {
     "@svgr/webpack": "5.5.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "elasticlunr": "0.9.5",
-    "gatsby": "3.3.0",
-    "gatsby-image": "3.3.0",
-    "gatsby-plugin-feed": "3.3.0",
-    "gatsby-plugin-manifest": "3.3.0",
-    "gatsby-plugin-netlify": "3.3.0",
-    "gatsby-plugin-offline": "4.3.0",
-    "gatsby-plugin-postcss": "4.3.0",
-    "gatsby-plugin-react-helmet": "4.3.0",
-    "gatsby-plugin-sharp": "3.3.0",
+    "gatsby": "3.10.1",
+    "gatsby-image": "3.10.0",
+    "gatsby-plugin-feed": "3.10.0",
+    "gatsby-plugin-manifest": "3.10.0",
+    "gatsby-plugin-netlify": "3.10.0",
+    "gatsby-plugin-offline": "4.10.0",
+    "gatsby-plugin-postcss": "4.10.0",
+    "gatsby-plugin-react-helmet": "4.10.0",
+    "gatsby-plugin-sharp": "3.10.2",
+    "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-plugin-svgr": "3.0.0-beta.0",
-    "gatsby-plugin-typescript": "3.3.0",
-    "gatsby-remark-autolink-headers": "4.0.0",
-    "gatsby-remark-copy-linked-files": "4.0.0",
-    "gatsby-remark-images": "5.0.0",
-    "gatsby-remark-katex": "5.0.0",
+    "gatsby-plugin-typescript": "3.10.0",
+    "gatsby-remark-autolink-headers": "4.7.0",
+    "gatsby-remark-copy-linked-files": "4.7.0",
+    "gatsby-remark-images": "5.7.0",
+    "gatsby-remark-katex": "5.7.0",
     "gatsby-remark-numbered-footnotes": "1.0.1",
-    "gatsby-remark-prismjs": "5.0.0",
-    "gatsby-source-filesystem": "3.3.0",
-    "gatsby-transformer-remark": "4.0.0",
-    "gatsby-transformer-sharp": "3.3.0",
+    "gatsby-remark-prismjs": "5.7.0",
+    "gatsby-remark-table-of-contents": "^1.0.0",
+    "gatsby-source-filesystem": "3.10.0",
+    "gatsby-styled-components-dark-mode": "^2.0.3",
+    "gatsby-transformer-remark": "4.7.0",
+    "gatsby-transformer-sharp": "3.10.0",
     "gitalk": "1.7.2",
-    "katex": "0.13.2",
-    "postcss": "8.2.10",
-    "prismjs": "1.23.0",
+    "katex": "0.13.13",
+    "postcss": "8.3.6",
+    "prismjs": "1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "remark": "13.0.0",
-    "strip-markdown": "4.0.0",
-    "tailwindcss": "2.1.1"
+    "strip-markdown": "4.1.0"
   },
   "devDependencies": {
-    "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.7",
-    "autoprefixer": "10.2.5",
-    "cssnano": "5.0.1",
-    "cssnano-preset-advanced": "5.0.0",
-    "prettier": "2.2.1",
-    "textlint": "11.9.0",
+    "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.8",
+    "autoprefixer": "10.3.1",
+    "cssnano": "5.0.7",
+    "cssnano-preset-advanced": "5.1.3",
+    "prettier": "2.3.2",
+    "styled-components": "^5.3.0",
+    "textlint": "12.0.2",
     "textlint-rule-footnote-order": "1.0.3",
-    "textlint-rule-max-comma": "1.0.4",
+    "textlint-rule-max-comma": "2.0.2",
     "textlint-rule-no-start-duplicated-conjunction": "2.0.2",
     "textlint-rule-no-todo": "2.0.1",
     "textlint-rule-period-in-list-item": "0.3.2",
