--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@giscus/react": "^1.0.0",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
     "gatsby": "3.3.0",
