--- a/.github/workflows/create-diagram.yaml
+++ b/.github/workflows/create-diagram.yaml
@@ -10,5 +10,5 @@ jobs:
       - name: Update diagram
         uses: githubocto/repo-visualizer@0.3.0
         with:
-          output_file: "images/diagram.svg"
+          output_file: "diagram.svg"
           excluded_paths: "dist,node_modules"
