--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@giscus/react": "^1.0.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
     "gatsby": "3.14.2",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-feed": "3.14.0",
     "gatsby-plugin-manifest": "3.14.0",
+    "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "4.14.0",
     "gatsby-plugin-postcss": "4.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
