--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "GATSBY_EXPERIMENT_DEVJS_LAZY=true gatsby develop",
+    "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint": "textlint posts/**/*.md"
@@ -26,27 +26,27 @@
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
-    "gatsby": "3.14.2",
+    "gatsby": "4.1.0",
     "gatsby-image": "3.11.0",
-    "gatsby-plugin-feed": "3.14.0",
-    "gatsby-plugin-manifest": "3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-offline": "4.14.0",
-    "gatsby-plugin-postcss": "4.14.0",
-    "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.1",
+    "gatsby-plugin-feed": "4.1.0",
+    "gatsby-plugin-manifest": "4.1.0",
+    "gatsby-plugin-mdx": "^3.1.0",
+    "gatsby-plugin-offline": "5.1.0",
+    "gatsby-plugin-postcss": "5.1.0",
+    "gatsby-plugin-react-helmet": "5.1.0",
+    "gatsby-plugin-sharp": "4.1.0",
     "gatsby-plugin-svgr": "3.0.0-beta.0",
-    "gatsby-plugin-typescript": "3.14.0",
-    "gatsby-remark-autolink-headers": "4.11.0",
-    "gatsby-remark-copy-linked-files": "4.11.0",
-    "gatsby-remark-images": "5.11.0",
-    "gatsby-remark-katex": "5.11.0",
-    "gatsby-remark-prismjs": "5.11.0",
-    "gatsby-source-filesystem": "3.14.0",
-    "gatsby-transformer-remark": "4.11.0",
-    "gatsby-transformer-sharp": "3.14.0",
-    "katex": "0.13.18",
-    "postcss": "8.3.9",
+    "gatsby-plugin-typescript": "4.1.0",
+    "gatsby-remark-autolink-headers": "5.1.0",
+    "gatsby-remark-copy-linked-files": "5.1.0",
+    "gatsby-remark-images": "6.1.0",
+    "gatsby-remark-katex": "6.1.0",
+    "gatsby-remark-prismjs": "6.1.0",
+    "gatsby-source-filesystem": "4.1.0",
+    "gatsby-transformer-remark": "5.1.0",
+    "gatsby-transformer-sharp": "4.1.0",
+    "katex": "0.15.1",
+    "postcss": "8.3.11",
     "prismjs": "1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -57,9 +57,9 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.8",
-    "autoprefixer": "10.3.7",
-    "cssnano": "5.0.8",
-    "cssnano-preset-advanced": "5.1.4",
+    "autoprefixer": "10.4.0",
+    "cssnano": "5.0.10",
+    "cssnano-preset-advanced": "5.1.6",
     "gatsby-remark-twitter-cards": "^0.6.1",
     "prettier": "2.4.1",
     "textlint": "12.0.2",
