--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
+    "react-query": "^3.32.3",
     "remark": "14.0.1",
     "strip-markdown": "5.0.0",
     "tailwindcss": "2.2.19"
