feat(netlify): switch all redirects to netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
+[build]
+  command = "npm run build"
+  publish = "/public/"
+
 [[headers]]
   for = "/*"
   [headers.values]
@@ -5,12 +9,79 @@
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
 
+# Blog post redirects to keep old Jenkins URL paths active
 [[redirects]]
   from = "/2020-02-04-making-react-fast"
   to = "/making-react-fast"
+  status = 301
+
+[[redirects]]
+  from = "2019-12-29-2020-albums-decade"
+  to = "albums-2010-2020-decade"
+  status = 301
+
+[[redirects]]
+  from = "2019-12-01-lost-connections"
+  to = "lost-connections"
+  status = 301
+
+[[redirects]]
+  from = "2019-11-24-how-fb-avoids-adblockers"
+  to = "how-fb-avoids-adblockers"
+  status = 301
+
+[[redirects]]
+  from = "2015-11-17-intro-to-flight-js"
+  to = "intro-to-flight-js"
+  status = 301
+
+[[redirects]]
+  from = "2019-07-21-clean-code"
+  to = "clean-code"
+  status = 301
+
+[[redirects]]
+  from = "2019-06-17-level-terminal-navigation"
+  to = "level-terminal-navigation"
+  status = 301
+
+[[redirects]]
+  from = "2019-03-31-functional-programming"
+  to = "intro-functional-programming"
+  status = 301
+
+[[redirects]]
+  from = "2018-11-03-introducing-react-scroll-to-v2"
+  to = "introducing-react-scroll-to-v2"
+  status = 301
+
+[[redirects]]
+  from = "2018-10-18-react-controlling-rendering-with-keys"
+  to = "react-controlling-rendering-with-keys"
+  status = 301
+
+[[redirects]]
+  from = "2018-10-11-tips-on-improving-fabricjs-speed"
+  to = "tips-on-improving-fabricjs-speed"
   status = 301
 
 # Redirect to social media and other common sites!
 [[redirects]]
   from = "/gh"
   to = "https://github.com/ganderzz/"
+
+[[redirects]]
+  from = "github"
+  to = "https://github.com/ganderzz/"
+
+[[redirects]]
+  from = "linkedin"
+  to = "https://www.linkedin.com/in/dylanpaulus/"
+
+[[redirects]]
+  from = "dev"
+  to = "https://dev.to/ganderzz/"
+
+[[redirects]]
+  from = "twitter"
+  to = "https://twitter.com/DylanPaulus/"
