--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "autoprefixer": "10.4.0",
     "cssnano": "5.0.10",
     "cssnano-preset-advanced": "5.1.6",
+    "gatsby-plugin-netlify": "^4.4.0",
     "gatsby-remark-twitter-cards": "^0.6.1",
     "prettier": "2.4.1",
     "textlint": "12.0.2",
