--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
-    "gatsby": "4.1.6",
+    "gatsby": "^4.1.6",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-feed": "4.1.1",
     "gatsby-plugin-manifest": "4.1.4",
