--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
-    "gatsby": "^4.1.6",
+    "gatsby": "4.1.6",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-feed": "4.1.1",
     "gatsby-plugin-manifest": "4.1.4",
-    "gatsby-plugin-mdx": "^3.1.4",
-    "gatsby-plugin-offline": "5.1.4",
+    "gatsby-plugin-mdx": "3.1.4",
     "gatsby-plugin-postcss": "5.1.0",
     "gatsby-plugin-react-helmet": "5.1.0",
     "gatsby-plugin-sharp": "4.1.4",
@@ -40,19 +39,19 @@
     "gatsby-remark-autolink-headers": "5.1.1",
     "gatsby-remark-copy-linked-files": "5.1.0",
     "gatsby-remark-images": "6.1.4",
-    "gatsby-remark-katex": "6.1.0",
+    "gatsby-remark-katex": "6.14.0",
     "gatsby-remark-prismjs": "6.1.0",
     "gatsby-source-filesystem": "4.1.3",
     "gatsby-transformer-remark": "5.1.4",
     "gatsby-transformer-sharp": "4.1.0",
-    "katex": "0.15.1",
+    "katex": "0.13.3",
     "postcss": "8.3.11",
     "prismjs": "1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
-    "react-query": "^3.32.3",
-    "remark": "14.0.1",
+    "react-query": "3.32.3",
+    "remark": "14.0.2",
     "strip-markdown": "5.0.0",
     "tailwindcss": "2.2.19"
   },
