--- a/package.json
+++ b/package.json
@@ -21,50 +21,50 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@giscus/react": "^1.0.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@giscus/react": "1.0.1",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
     "@svgr/webpack": "5.5.0",
     "elasticlunr": "0.9.5",
-    "gatsby": "4.1.6",
+    "gatsby": "4.14.1",
     "gatsby-image": "3.11.0",
     "gatsby-plugin-feed": "4.1.1",
     "gatsby-plugin-manifest": "4.1.4",
-    "gatsby-plugin-mdx": "3.1.4",
-    "gatsby-plugin-postcss": "5.1.0",
+    "gatsby-plugin-mdx": "3.14.0",
+    "gatsby-plugin-postcss": "5.14.0",
     "gatsby-plugin-react-helmet": "5.1.0",
     "gatsby-plugin-sharp": "4.1.4",
     "gatsby-plugin-svgr": "3.0.0-beta.0",
     "gatsby-plugin-typescript": "4.1.3",
     "gatsby-remark-autolink-headers": "5.1.1",
     "gatsby-remark-copy-linked-files": "5.1.0",
-    "gatsby-remark-images": "6.1.4",
+    "gatsby-remark-images": "6.14.0",
     "gatsby-remark-katex": "6.14.0",
-    "gatsby-remark-prismjs": "6.1.0",
-    "gatsby-source-filesystem": "4.1.3",
-    "gatsby-transformer-remark": "5.1.4",
-    "gatsby-transformer-sharp": "4.1.0",
+    "gatsby-remark-prismjs": "6.14.0",
+    "gatsby-source-filesystem": "4.14.0",
+    "gatsby-transformer-remark": "5.14.0",
+    "gatsby-transformer-sharp": "4.14.0",
     "katex": "0.13.3",
-    "postcss": "8.3.11",
-    "prismjs": "1.25.0",
+    "postcss": "8.4.14",
+    "prismjs": "1.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-query": "3.32.3",
     "remark": "14.0.2",
     "strip-markdown": "5.0.0",
-    "tailwindcss": "2.2.19"
+    "tailwindcss": "3.0.24"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-class-properties": "7.17.12",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.8",
-    "autoprefixer": "10.4.0",
-    "cssnano": "5.0.10",
-    "cssnano-preset-advanced": "5.1.6",
-    "gatsby-plugin-netlify": "^4.4.0",
-    "gatsby-remark-twitter-cards": "^0.6.1",
-    "prettier": "2.4.1",
-    "textlint": "12.0.2",
+    "autoprefixer": "10.4.7",
+    "cssnano": "5.1.9",
+    "cssnano-preset-advanced": "5.3.5",
+    "gatsby-plugin-netlify": "4.4.0",
+    "gatsby-remark-twitter-cards": "0.6.1",
+    "prettier": "2.6.2",
+    "textlint": "12.1.1",
     "textlint-rule-footnote-order": "1.0.3",
     "textlint-rule-max-comma": "2.0.2",
     "textlint-rule-no-start-duplicated-conjunction": "2.0.2",
