--- a/package.json
+++ b/package.json
@@ -42,30 +42,22 @@
     "gatsby-source-filesystem": "4.20.0",
     "gatsby-transformer-remark": "5.20.0",
     "gatsby-transformer-sharp": "4.20.0",
-    "katex": "0.13.3",
+    "katex": "0.16.0",
     "prismjs": "1.28.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "remark": "14.0.2",
-    "tailwindcss": "3.1.8"
+    "tailwindcss": "3.1.8",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@textlint-rule/textlint-rule-no-unmatched-pair": "1.0.8",
     "autoprefixer": "10.4.8",
     "cssnano": "5.1.12",
     "cssnano-preset-advanced": "5.3.8",
     "gatsby-plugin-netlify": "5.0.1",
     "gatsby-remark-twitter-cards": "0.6.1",
-    "prettier": "2.7.1",
     "postcss": "8.4.16",
-    "textlint": "12.2.1",
-    "textlint-rule-footnote-order": "1.0.3",
-    "textlint-rule-max-comma": "2.0.2",
-    "textlint-rule-no-start-duplicated-conjunction": "2.0.2",
-    "textlint-rule-no-todo": "2.0.1",
-    "textlint-rule-period-in-list-item": "0.3.2",
-    "textlint-rule-rousseau": "1.4.7",
-    "textlint-rule-stop-words": "3.0.1"
+    "prettier": "2.7.1"
   }
 }
