--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@astrojs/preact": "1.0.0",
     "@astrojs/tailwind": "1.0.0",
+    "@astrojs/image": "0.3.4",
     "astro": "1.0.0",
+    "astro-compress": "1.0.2",
     "mdast-util-to-string": "3.1.0",
     "reading-time": "1.5.0"
   },
   "dependencies": {
-    "giscus": "^1.2.0",
+    "giscus": "1.2.0",
     "preact": "10.7.3"
   }
 }
