--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "astro": "1.6.10",
     "astro-compress": "1.1.7",
     "mdast-util-to-string": "3.1.0",
+    "svgo": "2.8.0",
     "reading-time": "1.5.0"
   },
   "dependencies": {
     "astro-icon": "0.8.0",
     "giscus": "1.2.4",
     "preact": "10.11.3",
-    "svgo": "2.8.0"
+    "tailwindcss": "^3.2.4"
   }
 }
