--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "svgo": "2.8.0"
     },
     "dependencies": {
+        "@astrojs/mdx": "^0.12.0",
         "@astrojs/rss": "1.0.3",
         "@astrojs/sitemap": "1.0.0",
         "astro-icon": "0.8.0",
