--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-    "name": "dylanpaulus",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "astro dev",
-        "start": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview",
-        "astro": "astro"
-    },
-    "devDependencies": {
-        "@astrojs/image": "0.11.6",
-        "@astrojs/preact": "1.2.0",
-        "@astrojs/tailwind": "2.1.2",
-        "@types/elasticlunr": "^0.9.5",
-        "astro": "1.6.10",
-        "astro-compress": "1.1.7",
-        "mdast-util-to-string": "3.1.0",
-        "reading-time": "1.5.0",
-        "svgo": "2.8.0"
-    },
-    "dependencies": {
-        "@astrojs/mdx": "^0.12.0",
-        "@astrojs/rss": "1.0.3",
-        "@astrojs/sitemap": "1.0.0",
-        "astro-icon": "0.8.0",
-        "elasticlunr": "0.9.5",
-        "giscus": "1.2.4",
-        "preact": "10.11.3",
-        "tailwindcss": "3.2.4"
-    }
+  "name": "dylanpaulus",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "devDependencies": {
+    "@astrojs/image": "0.11.6",
+    "@astrojs/preact": "2.0.3",
+    "@astrojs/tailwind": "2.1.2",
+    "@types/elasticlunr": "0.9.5",
+    "astro": "1.6.10",
+    "astro-compress": "1.1.7",
+    "mdast-util-to-string": "3.1.0",
+    "reading-time": "1.5.0",
+    "svgo": "2.8.0"
+  },
+  "dependencies": {
+    "@astrojs/mdx": "0.12.0",
+    "@astrojs/rss": "1.0.3",
+    "@astrojs/sitemap": "1.0.0",
+    "astro-icon": "0.8.0",
+    "elasticlunr": "0.9.5",
+    "giscus": "1.2.4",
+    "preact": "10.11.3",
+    "tailwindcss": "3.2.4"
+  }
 }
