fix: inline icon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@layouts/*": ["./src/layouts/*"],
       "@styles/*": ["./src/styles/*"],
       "@types/*": ["./src/types/*"],
+      "@icons/*": ["./src/icons/*"],
       "@utils/*": ["./src/utils/*"]
     }
   }
