--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && generate-og",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "generate-og": "ts-node --esm ./bin/generate-og.mjs"
   },
   "devDependencies": {
     "@astrojs/image": "0.16.0",
@@ -15,16 +16,22 @@
     "@astrojs/tailwind": "3.1.0",
     "astro": "2.1.2",
     "astro-compress": "1.1.35",
+    "axios": "^1.3.4",
     "mdast-util-to-string": "3.1.1",
     "reading-time": "1.5.0",
-    "svgo": "3.0.2"
+    "satori": "^0.4.3",
+    "sharp": "^0.31.3",
+    "svgo": "3.0.2",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@astrojs/mdx": "0.18.0",
     "@astrojs/rss": "2.2.0",
     "@astrojs/sitemap": "1.2.0",
+    "chrome-aws-lambda": "10.1.0",
     "giscus": "1.2.8",
     "preact": "10.13.1",
+    "puppeteer-core": "10.4.0",
     "tailwindcss": "3.2.7"
   }
 }
