--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
     "baseUrl": ".",
     "target": "ESNext",
     "module": "ESNext",
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowJs": true,
+    "skipLibCheck": true,
     "strictNullChecks": true,
     "noEmit": true,
     "strict": true,
