--- a/package.json
+++ b/package.json
@@ -11,27 +11,25 @@
     "generate-og": "ts-node --esm ./bin/generate-og.mjs"
   },
   "devDependencies": {
-    "@astrojs/image": "0.16.0",
+    "@astrojs/image": "0.16.4",
     "@astrojs/preact": "2.1.0",
-    "@astrojs/tailwind": "3.1.0",
-    "astro": "2.1.2",
+    "@astrojs/tailwind": "3.1.1",
+    "astro": "2.1.9",
     "astro-compress": "1.1.35",
-    "axios": "^1.3.4",
+    "axios": "1.3.4",
     "mdast-util-to-string": "3.1.1",
     "reading-time": "1.5.0",
-    "satori": "^0.4.3",
-    "sharp": "^0.31.3",
+    "satori": "0.4.4",
+    "sharp": "0.32.0",
     "svgo": "3.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "10.9.1"
   },
   "dependencies": {
-    "@astrojs/mdx": "0.18.0",
-    "@astrojs/rss": "2.2.0",
-    "@astrojs/sitemap": "1.2.0",
-    "chrome-aws-lambda": "10.1.0",
+    "@astrojs/mdx": "0.18.2",
+    "@astrojs/rss": "2.3.2",
+    "@astrojs/sitemap": "1.2.1",
     "giscus": "1.2.8",
-    "preact": "10.13.1",
-    "puppeteer-core": "10.4.0",
-    "tailwindcss": "3.2.7"
+    "preact": "10.13.2",
+    "tailwindcss": "3.3.1"
   }
 }
