--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "satori": "0.7.4",
     "sharp": "0.32.0",
     "svgo": "3.0.2",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@astrojs/mdx": "1.0.0",
