--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "dylanpaulus",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build && npm run generate-og",
-    "preview": "astro preview",
-    "astro": "astro",
-    "generate-og": "ts-node --esm ./bin/generate-og.mjs"
-  },
-  "devDependencies": {
-    "@astrojs/preact": "3.0.0",
-    "@astrojs/tailwind": "5.0.0",
-    "astro": "3.0.7",
-    "astro-compress": "2.0.15",
-    "mdast-util-to-string": "4.0.0",
-    "reading-time": "1.5.0",
-    "satori": "0.7.4",
-    "sharp": "0.32.0",
-    "svgo": "3.0.2",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "1.0.0",
-    "@astrojs/rss": "3.0.0",
-    "@astrojs/sitemap": "3.0.0",
-    "giscus": "1.3.0",
-    "preact": "10.17.1",
-    "tailwindcss": "3.3.3"
-  }
+    "name": "dylanpaulus",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build && npm run generate-og",
+        "preview": "astro preview",
+        "astro": "astro",
+        "generate-og": "ts-node --esm ./bin/generate-og.mjs"
+    },
+    "devDependencies": {
+        "@astrojs/preact": "3.0.1",
+        "@astrojs/tailwind": "5.0.2",
+        "@types/node": "20.9.0",
+        "astro": "3.5.0",
+        "astro-compress": "2.2.3",
+        "mdast-util-to-string": "4.0.0",
+        "reading-time": "1.5.0",
+        "satori": "0.7.4",
+        "sharp": "0.32.0",
+        "svgo": "3.0.2",
+        "ts-node": "10.9.1",
+        "typescript": "5.2.2"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "1.1.4",
+        "@astrojs/rss": "3.0.0",
+        "@astrojs/sitemap": "3.0.3",
+        "giscus": "1.3.0",
+        "preact": "10.18.2",
+        "tailwindcss": "3.3.5"
+    }
 }
