add new timescale post & remove mastodon

--- a/netlify.toml
+++ b/netlify.toml
@@ -182,5 +182,9 @@ from = "twitter"
 to = "https://twitter.com/DylanPaulus/"
 
 [[redirects]]
+from = "x"
+to = "https://twitter.com/DylanPaulus/"
+
+[[redirects]]
 from = "mastodon"
 to = "https://hachyderm.io/web/@ganderzz"
