add new articles & update rss

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@astrojs/tailwind": "5.1.0",
     "@types/node": "20.11.28",
     "astro": "4.5.5",
+    "markdown-it": "^14.1.0",
     "mdast-util-to-string": "4.0.0",
     "reading-time": "1.5.0",
+    "sanitize-html": "^2.13.1",
     "satori": "0.7.4",
     "svgo": "3.0.2",
     "ts-node": "10.9.2",
