--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "dylanpaulus",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "generate-og": "ts-node --esm ./bin/generate-og.mjs"
-  },
-  "devDependencies": {
-    "@astrojs/preact": "3.1.1",
-    "@astrojs/tailwind": "5.1.0",
-    "@types/node": "20.11.28",
-    "astro": "4.5.5",
-    "markdown-it": "^14.1.0",
-    "mdast-util-to-string": "4.0.0",
-    "reading-time": "1.5.0",
-    "sanitize-html": "^2.13.1",
-    "satori": "0.7.4",
-    "svgo": "3.0.2",
-    "ts-node": "10.9.2",
-    "typescript": "5.4.2"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "2.2.0",
-    "@astrojs/rss": "4.0.5",
-    "@astrojs/sitemap": "3.1.1",
-    "preact": "10.19.6",
-    "tailwindcss": "3.4.1"
-  }
+    "name": "dylanpaulus",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build && yarn build-search",
+        "preview": "astro preview",
+        "astro": "astro",
+        "build-search": "pagefind --site dist",
+        "generate-og": "ts-node --esm ./bin/generate-og.mjs"
+    },
+    "devDependencies": {
+        "@astrojs/preact": "3.1.1",
+        "@astrojs/tailwind": "5.1.0",
+        "@types/node": "20.11.28",
+        "astro": "4.5.5",
+        "markdown-it": "^14.1.0",
+        "mdast-util-to-string": "4.0.0",
+        "pagefind": "^1.4.0",
+        "reading-time": "1.5.0",
+        "sanitize-html": "^2.13.1",
+        "satori": "0.7.4",
+        "svgo": "3.0.2",
+        "ts-node": "10.9.2",
+        "typescript": "5.4.2"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "2.2.0",
+        "@astrojs/rss": "4.0.5",
+        "@astrojs/sitemap": "3.1.1",
+        "preact": "10.19.6",
+        "tailwindcss": "3.4.1"
+    }
 }
