--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
     "scripts": {
         "dev": "astro dev",
         "start": "astro dev",
-        "build": "astro build && yarn build-search",
+        "build": "astro build && yarn build-search && yarn generate-og",
         "preview": "astro preview",
         "astro": "astro",
         "build-search": "pagefind --site dist",
-        "generate-og": "ts-node --esm ./bin/generate-og.mjs"
+        "generate-og": "tsx ./bin/generate-og.tsx"
     },
     "devDependencies": {
-        "@astrojs/preact": "3.1.1",
-        "@astrojs/tailwind": "5.1.0",
-        "@types/node": "20.11.28",
-        "astro": "4.5.5",
+        "@astrojs/preact": "4.1.3",
+        "@astrojs/tailwind": "6.0.2",
+        "@types/node": "25.0.9",
+        "astro": "5.16.11",
         "markdown-it": "^14.1.0",
         "mdast-util-to-string": "4.0.0",
-        "pagefind": "^1.4.0",
+        "pagefind": "1.4.0",
         "reading-time": "1.5.0",
-        "sanitize-html": "^2.13.1",
+        "sanitize-html": "2.17.0",
         "satori": "0.7.4",
         "svgo": "3.0.2",
-        "ts-node": "10.9.2",
-        "typescript": "5.4.2"
+        "tsx": "4.21.0",
+        "typescript": "5.9.3"
     },
     "dependencies": {
-        "@astrojs/mdx": "2.2.0",
-        "@astrojs/rss": "4.0.5",
-        "@astrojs/sitemap": "3.1.1",
-        "preact": "10.19.6",
-        "tailwindcss": "3.4.1"
+        "@astrojs/mdx": "4.3.13",
+        "@astrojs/rss": "4.0.15",
+        "@astrojs/sitemap": "3.7.0",
+        "preact": "10.28.2",
+        "tailwindcss": "3.0.24"
     }
 }
