--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,43 @@
 {
-  "extends": "astro/tsconfigs/base",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "target": "ESNext",
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
-    "noEmit": true,
-    "strict": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
-    "allowSyntheticDefaultImports": true,
-    "paths": {
-      "~/*": ["./*"],
-      "@components/*": ["./src/components/*"],
-      "@layouts/*": ["./src/layouts/*"],
-      "@styles/*": ["./src/styles/*"],
-      "@types/*": ["./src/types/*"],
-      "@icons/*": ["./src/icons/*"],
-      "@utils/*": ["./src/utils/*"]
+    "extends": "astro/tsconfigs/base",
+    "compilerOptions": {
+        "baseUrl": ".",
+        "target": "ESNext",
+        "module": "ESNext",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strictNullChecks": true,
+        "noEmit": true,
+        "strict": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "preact",
+        "allowSyntheticDefaultImports": true,
+        "paths": {
+            "~/*": [
+                "./*"
+            ],
+            "@components/*": [
+                "./src/components/*"
+            ],
+            "@layouts/*": [
+                "./src/layouts/*"
+            ],
+            "@styles/*": [
+                "./src/styles/*"
+            ],
+            "@types/*": [
+                "./src/types/*"
+            ],
+            "@icons/*": [
+                "./src/icons/*"
+            ],
+            "@utils/*": [
+                "./src/utils/*"
+            ]
+        }
     }
-  }
 }
